<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>groupId</groupId>
    <artifactId>MyEmptyCompiler</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
    </dependencies>

    <build>
	    <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-modules</arg><arg>jdk.internal.vm.ci</arg>
                        <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.runtime=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.services=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

	    </plugins>

    </build>


</project>
